--- a/shop.css
+++ b/shop.css
@@ -11,24 +11,97 @@ body {
   min-height: 100%;
   width: 100vw;
 }
-nav {
-  padding-top: 20px;
-  margin-bottom: 100px;
+main {
+  padding-bottom: 100px;
 }
-nav a {
-  text-decoration: none;
-  color: black;
+/* Navbar container */
+.navbar {
+  overflow: hidden;
+  /* background-color: rgb(252, 249, 238); */
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: left;
   font-size: 20px;
-  margin: 60px;
-  /* padding: 100px 30px; */
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
-.logo {
+
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 20px;
+  border: none;
+  outline: none;
+  color: black;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #ddd;
+  color: black;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(252, 249, 238);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 10px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+#logo {
   text-align: center;
   color: black;
+  margin-bottom: 100px;
 }
 .categoryName {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+.categoryText {
+  align-items: center;
+  text-align: center;
+  font-size: 30px;
+  margin: 0 200px;
 }
 .btns {
   display: flex;
@@ -44,9 +117,31 @@ nav a {
   /* border: 1px solid black; */
   text-align: center;
   margin: auto;
+  position: relative;
 }
 .productImg {
-  width: 500px;
+  width: 450px;
+  position: relative;
+}
+.name {
+  font-size: 25px;
+}
+.price,
+.size {
+  font-size: 20px;
+}
+.span {
+  display: inline-block;
+  background-color: black;
+  width: 200px;
+  margin-bottom: 10px;
+  color: white;
+  /* background-color: rgb(235, 63, 63); */
+  font-size: 20px;
+  /* position: absolute;
+  bottom: 25%;
+  left: 55%;
+  -webkit-transform: rotate(40deg); */
 }
 .btn {
   display: inline-block;
@@ -61,7 +156,41 @@ nav a {
   font-size: 20px;
   transition-duration: 0.4s;
 }
+.active,
 .btn:hover {
   background-color: black; /* Green */
   color: white;
+}
+footer {
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+footer a {
+  font-size: 15px;
+  text-decoration: none;
+  color: black;
+}
+.footer-content {
+  display: flex;
+  padding: 0 10px 10px 10px;
+}
+h5 {
+  border-bottom: solid;
+}
+.customer-service,
+.visit,
+.our-company,
+.social {
+  display: flex;
+  flex-direction: column;
+  padding: 0 40px;
+}
+input {
+  height: 30px;
+  width: 150px;
+  border: none;
+  border-bottom: solid black;
 }
