--- a/style.css
+++ b/style.css
@@ -9,31 +9,106 @@
 body {
   background-color: rgb(252, 249, 238);
   min-height: 100%;
-  width: 100vw;
+  width: 100%;
 }
 header {
   background: url("https://www.jomalone.com/media/export/cms/campaigns/Silver_Birch_Lavender/Homepage/22F04_SBL_1_Homepage_Hero_Desktop.jpg");
   background-size: cover;
   background-position: center;
-  height: 900px;
+  height: 100vh;
 }
-nav {
-  padding-top: 20px;
+/* Navbar container */
+.navbar {
+  overflow: hidden;
+  /* background-color: rgb(252, 249, 238); */
 }
-nav a {
-  text-decoration: none;
-  color: whitesmoke;
+
+/* Links inside the navbar */
+.navbar a {
+  float: left;
   font-size: 20px;
-  margin: 60px;
-  /* padding: 100px 30px; */
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
-.logo {
+
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 20px;
+  border: none;
+  outline: none;
+  color: black;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: rgb(252, 249, 238);
+  color: black;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(252, 249, 238);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 10px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+#logo {
   text-align: center;
   color: whitesmoke;
 }
 h4 {
-  font-size: 20px;
+  font-size: 30px;
 }
+#headerName {
+  text-align: center;
+  color: whitesmoke;
+  padding-top: 100px;
+}
+.welcome-text {
+  text-align: center;
+  padding: 30px;
+  font-size: 30px;
+}
+
 a {
   /* text-decoration: none; */
   color: black;
@@ -48,13 +123,14 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 50%;
 }
 /* .red-img {
   width: 75%;
-  height: 75%;
 } */
 .red-right {
   margin-right: 300px;
+  width: 95%;
 }
 .candles {
   text-align: center;
@@ -70,17 +146,56 @@ a {
   justify-content: center;
   margin: 100px;
 }
-
+.scent-pairing,
+.celebrating {
+  width: 50%;
+}
 .scent-right-img,
 .scent-left-img {
   width: 600px;
   height: 600px;
-  margin: 100px 100px 20px 100px;
+  /* margin: 100px 100px 20px 100px; */
 }
 .fragrances {
+  /* width: 50%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 100px;
+  padding: 100px;
+}
+.fragrances h4 {
+  padding-top: 10px;
+}
+footer {
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+footer a {
+  font-size: 15px;
+  text-decoration: none;
+}
+.footer-content {
+  display: flex;
+  padding: 0 10px 10px 10px;
+}
+h5 {
+  border-bottom: solid;
+}
+.customer-service,
+.visit,
+.our-company,
+.social {
+  display: flex;
+  flex-direction: column;
+  padding: 0 40px;
+}
+input {
+  height: 30px;
+  width: 150px;
+  border: none;
+  border-bottom: solid black;
 }
