--- a/shop.css
+++ b/shop.css
@@ -88,6 +88,9 @@ main {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+.cart {
+  margin-left: 70%;
+}
 #logo {
   text-align: center;
   color: black;
@@ -160,6 +163,14 @@ main {
 .btn:hover {
   background-color: black; /* Green */
   color: white;
+}
+.btnAdd {
+  background-color: rgb(252, 249, 238);
+  padding: 5px;
+  font-size: 15px;
+  border-radius: 5px;
+  border: black solid 0.5px;
+  cursor: pointer;
 }
 footer {
   background-color: white;
